# Saper

./: CMakeLists.txt  Saper  main.c
Files/: settings.json
Include/: dataBase.h  dataJSON.h  window.h
Source/: dataBase.c  dataJSON.c  window.c
